# multibot_robot

./: CMakeLists.txt  README.md  package.xml
config/: ISR_M2_lds_2d.lua
include/: robot.hpp
include/multibot_robot/: distance_calculations.hpp  kanayama_controller.hpp  motion_controller.hpp  motion_generator.hpp  mpc.hpp  mpc_optimizer.hpp  pid_controller.hpp  robot.hpp  robot_panel.hpp  trajectory_follower.hpp
include/multibot_robot/g2o_utils/: base_mpc_edges.hpp  edge_acceleration.hpp  edge_kinematics.hpp  edge_position_optimal.hpp  edge_prefer_rotdir.hpp  edge_time_optimal.hpp  edge_velocity.hpp  edge_waypoint.hpp  g2o_utils.hpp  penalties.hpp  pose_se2.hpp  vertex_pose.hpp  vertex_timediff.hpp
launch/: keyboard_controller_launch.py  keyboard_launch.py  map_saver_launch.py  mapping_launch.py  mapping_simul_launch.py  multibot_robot_simul_launch.py  robot1_launch.py  robot1_simul_launch.py  robot2_simul_launch.py  spawn_robot_launch.py  spawn_robot_launch_sdf.py  spawn_robot_launch_xacro.py
models/ISR_M2/: ISR_M2.urdf  model.sdf
models/Robot1/: model.sdf  model.xacro
models/Robot2/: model.sdf
params/: amcl.yaml
robot/: robot1.yaml  robot2.yaml  robot3.yaml  robotConfig.yaml
rviz/: multibot_robot.rviz  multibot_robot2.rviz
src/: kanayama_controller.cpp  main.cpp  motion.cpp  motion_controller.cpp  motion_generator.cpp  mpc.cpp  mpc_controller.cpp  mpc_optimizer.cpp  pid_controller.cpp  robot.cpp  robot_panel.cpp  trajectory_follower.cpp
ui/: robot_panel.ui
