<?xml version="1.0"?>
<package format="3">
  <name>multibot_robot</name>
  <version>0.5.0</version>
  <description>
    Multi-robot robot
  </description>
  <maintainer email="hchju777@korea.ac.kr">Changju Hwang</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt_build</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>multibot_ros2_interface</depend>
  <depend>multibot_util</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>